Bug 38054 - Content disappeared on image insertion
Summary: Content disappeared on image insertion
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.3.2 release
Hardware: x86-64 (AMD64) Linux (All)
: high critical
Assignee: Cédric Bosdonnat
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-07 16:29 UTC by Alexandro Colorado
Modified: 2025-05-09 13:42 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Document in docx with issues (315.50 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2011-06-07 16:29 UTC, Alexandro Colorado
Details
Original document with content. (136.15 KB, application/vnd.oasis.opendocument.text)
2011-06-07 16:30 UTC, Alexandro Colorado
Details
Webpage saved in Writer as .odt (41.44 KB, application/vnd.oasis.opendocument.text)
2011-06-18 02:44 UTC, Duncan Murray
Details
Webpage saved in Writer as Word2007 docx (7.38 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2011-06-18 02:45 UTC, Duncan Murray
Details
Webpage saved in Writer as Office Open XML (7.33 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2011-06-18 02:45 UTC, Duncan Murray
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandro Colorado 2011-06-07 16:29:14 UTC
Created attachment 47695 [details]
Document in docx with issues

A rather large document (+90 pages) loose all the content including footers, titles and styles.  The issue happened after inserting some images and saving as docx file format.
Comment 1 Alexandro Colorado 2011-06-07 16:30:17 UTC
Created attachment 47696 [details]
Original document with content.

This is the original document with all it's content in ODF format.
Comment 2 Alexandro Colorado 2011-06-07 16:38:36 UTC
Platform was Debian testing Linux running on 64 bit on AMD Turion.
Comment 3 Andras Timar 2011-06-09 02:38:18 UTC
@Cedric: LibreOffice 3.4.0 crashes when I try to save the original document to docx. 
@Alexandro: Can you please attach the ODT after inserting those images (logo in the header I suppose...). When I saved the original ODT to DOCX in 3.3.2 I did not see data loss.
Comment 4 Alexandro Colorado 2011-06-11 20:56:02 UTC
(In reply to comment #3)
> @Cedric: LibreOffice 3.4.0 crashes when I try to save the original document to
> docx. 
> @Alexandro: Can you please attach the ODT after inserting those images (logo in
> the header I suppose...). When I saved the original ODT to DOCX in 3.3.2 I did
> not see data loss.

I am somewhat confused. The ODT I put up already has the image. The ODT was generated as an alternative to the docx (which had the data loss). 

Just to make it clear:
1. user recieved a +90 document in docx
2. user added changes and insert image.
3. saved as docx
4. open the docx and lost data.
5. saved to odt to avoid the data loss.

So the issue is when saving to docx.
Comment 5 Duncan Murray 2011-06-18 02:43:54 UTC
I have discovered a similar problem flagged up by this article:

http://www.pcworld.com/businesscenter/article/230527/ubuntu_linux_day_16_ext4_vs_ntfs.html

Where the author notes a significant decrease in filesize when saving the webpage as a docx file.  I have attempted the same by copying the contents of the webpage into libreoffice writer, then saving as .odt, word 2007 and office open xml.  When opening these files, the images are missing in the word 2007 and office open xml files.

I am using ubuntu 10.04, gnome 2.30.2 and LibreOffice 3.3.2 
OOO330m19 (Build:202)
tag libreoffice-3.3.2.2, Ubuntu package 1:3.3.2-1ubuntu2~lucid1

PS as a side note : I was under the impression docx files were an open standard, so surely this would be a the best method of saving files for use by both MS word and Libreoffice???
Comment 6 Duncan Murray 2011-06-18 02:44:43 UTC
Created attachment 48126 [details]
Webpage saved in Writer as .odt
Comment 7 Duncan Murray 2011-06-18 02:45:19 UTC
Created attachment 48127 [details]
Webpage saved in Writer as Word2007 docx
Comment 8 Duncan Murray 2011-06-18 02:45:48 UTC
Created attachment 48128 [details]
Webpage saved in Writer as Office Open XML
Comment 9 Florian Reisinger 2012-03-25 06:25:04 UTC
Working @ Ubuntu 11.10 LibreOfficce 3.4.4 OOO340m1 (Build:402)
Comment 10 Commit Notification 2014-02-21 13:34:17 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fd859ee5802d6fa353526e632b49a8208444769e

Related fdo#38054: Don't crash when opening this document.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.