Related fdo#38054 fdo#82114: Don't crash when opening this document.

The document itself is (I think) corrupted, but we shouldn't crash anyway.

(cherry picked from commit fd859ee5802d6fa353526e632b49a8208444769e)

Change-Id: I7ecfaed7003de2976e47992c89bb695a5cdffda4